# lib3mf_rust

./: .gitignore  100_PERCENT_CONFORMANCE_PLAN.md  BOOLEAN_VISUALIZATION_SUMMARY.md  CHANGELOG.md  COMPONENT_IMPLEMENTATION_SUMMARY.md  CONFORMANCE_REPORT.md  CONFORMANCE_TEST_FIX.md  CONTRIBUTING.md  CURRENT_STATE_ASSESSMENT.md  Cargo.toml  DISPLACEMENT_EXTENSION_FIX_SUMMARY.md  EPX_2606_IMPLEMENTATION_SUMMARY.md  EPX_2606_INVESTIGATION.md  ERROR_HANDLING.md  ERROR_MESSAGE_IMPROVEMENTS.md  ERROR_TYPE_VALIDATION.md  EXPECTED_FAILURES_IMPLEMENTATION.md  EXTENSION_SUPPORT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_POLYGON_CLIPPING.md  ISSUES_CAPTURE_SUMMARY.md  LICENSE  MESH_OPERATIONS_SUMMARY.md  MIGRATION.md  MIGRATION_FROM_CPP.md  MIGRATION_SCRIPT_README.md  PERFORMANCE.md  POLYGON_CLIPPING.md  PR_SUMMARY_TEXTURE_MULTIPROPERTIES.md  README.md  REMAINING_ISSUES.md  SECURE_CONTENT_SUPPORT.md  SECURITY.md  SINGULAR_TRANSFORM_FIX.md  SUITE11_VALIDATION_IMPLEMENTATION.md  SUITE8_FIX_SUMMARY.md  TESTING_QUICK_REFERENCE.md  TEXTURE_MULTIPROPERTY_IMPLEMENTATION.md  WORKFLOW_OPTIMIZATION_SUMMARY.md  WRITER_REGISTRY_INTEGRATION.md  (+6 more)
.github/: copilot-instructions.md  dependabot.yml
.github/scripts/: analyze_fuzz_crash.py
.github/workflows/: README.md  ci.yml  conformance.yml  fuzzing.yml  security-audit.yml
benches/: parse_benchmark.rs
conformance_tasks/: README.md  phase1_1_analyze_failures.md  phase2_1_required_attributes.md  phase3_components.md
docs/: FUZZING_AUTOMATION.md
examples/: README.md  advanced_materials.rs  analyze_negative_tests.rs  analyze_suite11_failures.rs  beam_lattice_demo.rs  boolean_operations_demo.rs  build_transformations.rs  calculate_normals.rs  categorize_failures.rs  components.rs  comprehensive_disp_test.rs  create_composite_test.rs  create_multiproperty_test.rs  custom_extension.rs  custom_key_provider.rs  debug_3314_05.rs  debug_disp_triangle.rs  debug_test.rs  detailed_failure_analysis.rs  detailed_failures.rs  error_messages.rs  export_to_obj.rs  export_to_stl.rs  extension_handler.rs  extension_registry_factory.rs  extension_support.rs  extract_colors.rs  extract_thumbnail.rs  inspect_colors.rs  mesh_analysis.rs  mesh_slicing_demo.rs  mesh_subdivision.rs  parse_3mf.rs  polygon_clipping_demo.rs  polygon_triangulation_demo.rs  production_handler_demo.rs  safe_mesh_usage.rs  secure_content_handler.rs  slice_extension_demo.rs  test_0604_files.rs  (+24 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_mesh_validation.rs  fuzz_parse_3mf.rs  fuzz_parse_with_extensions.rs  fuzz_xml_parser.rs
github_issue_templates/: README.md  issue_1_production_extension.md  issue_7_negative_test_conformance.md  issue_8_base_materials.md
github_issues/: README.md
github_issues/documentation/: 01_migration_guide.md
github_issues/extension_support/: 01_production_uuid_extraction.md  02_slice_stack_extraction.md  03_beam_lattice_extraction.md
github_issues/features/: 01_writer_serialization.md  02_advanced_materials.md
github_issues/testing/: 01_conformance_report_generation.md  02_error_messages.md
src/: decryption.rs  error.rs  extension.rs  key_provider.rs  lib.rs  mesh_ops.rs  model.rs  model.rs.README  model.rs.bak  opc.rs  opc.rs.old  parser.rs  polygon_clipping.rs  polygon_triangulation.rs  streaming.rs  validator.rs  writer.rs
src/extensions/: boolean_ops.rs  (+8 more)
test_files/: test_thumbnail.3mf
tests/: EXPECTED_FAILURES.md  README.md  advanced_materials_integration_test.rs  advanced_materials_test.rs  beam_lattice_balls_test.rs  boolean_operations_test.rs  component_edge_cases_test.rs  component_test.rs  conformance.rs  conformance_config_test.rs  conformance_individual.rs  conformance_tests.rs  core.rs  custom_extension_test.rs  debug_suite1_failures.rs  expected_failures.json  expected_failures_test.rs  extension_support_test.rs  extension_validation_integration_test.rs  extension_validation_test.rs  extensions.rs  final_verification_test.rs  infrastructure.rs  integration_test.rs  key_provider_test.rs  mesh_helpers_test.rs  mesh_operations_test.rs  mesh_slicing_test.rs  metadata_validation_test.rs  post_parse_integration_test.rs  proptest_tests.proptest-regressions  proptest_tests.rs  regression.rs  secure_content_handler_test.rs  secure_content_test.rs  slice_extension_test.rs  test_1605_path.rs  test_803_investigation.rs  test_advanced_materials.rs  test_debug_spx.rs  (+14 more)
tools/viewer/: AXIS_TOGGLE_FEATURE.md  AXIS_VISUALIZATION.md  BEAM_LATTICE_RENDERING.md  BEAM_LATTICE_VISUAL_GUIDE.md  BOOLEAN_OPERATIONS_VISUALIZATION.md  Cargo.toml  DEMO_USAGE.md  DISPLACEMENT_IMPLEMENTATION_SUMMARY.md  DISPLACEMENT_VISUALIZATION.md  DRAG_DROP_IMPLEMENTATION.md  GUI_MENU_FEATURE.md  GUI_MENU_IMPLEMENTATION.md  GUI_MENU_TESTING.md  GUI_MENU_VISUAL_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_KEYBOARD_CONTROLS.md  INFO_PANEL_MOCKUP.txt  KEYBOARD_CONTROLS_GUIDE.md  LIVE_SLICE_PREVIEW.md  MATERIAL_RENDERING.md  MODEL_INFO_PANEL.md  PRINT_AREA_FEATURE.md  PRINT_AREA_VISUAL_GUIDE.md  PRINT_BED_CONFIG_IMPLEMENTATION.md  README.md  SCREENSHOT_FEATURE.md  SELECTION_FEATURE.md  SLICE_RENDERER.md  SLICE_STACK_FEATURE.md  SLICE_STACK_IMPLEMENTATION.md  SLICE_VIEW_FEATURE.md  SLICE_VIEW_IMPLEMENTATION_SUMMARY.md  USAGE_EXAMPLES.md  demo_displacement.sh  demo_slice_stack.sh  demo_slice_view.sh  test_slice_preview.sh  validate_slice_stack.sh
tools/viewer/examples/: render_slice_demo.rs  resolution_comparison.rs  show_help.rs
tools/viewer/kiss3d-patch/: Cargo.toml  PATCH_README.md
tools/viewer/kiss3d-patch/src/: error.rs  lib.rs
tools/viewer/kiss3d-patch/src/event/: event_manager.rs  window_event.rs
tools/viewer/kiss3d-patch/src/loader/: obj.rs
tools/viewer/kiss3d-patch/src/resource/: framebuffer_manager.rs  texture_manager.rs
tools/viewer/kiss3d-patch/src/scene/: planar_scene_node.rs  scene_node.rs
tools/viewer/kiss3d-patch/src/window/: gl_canvas.rs
tools/viewer/src/: browser_ui.rs  github_api.rs  keybindings.rs  main.rs  menu_ui.rs  slice_renderer.rs  slice_window.rs  ui_viewer.rs  ui_viewer.rs.bak
(+83 files in other folders)
