[package]
name = "lib3mf"
version = "0.1.0"
edition = "2024"
authors = ["lib3mf_rust contributors"]
description = "Pure Rust implementation for 3MF (3D Manufacturing Format) parsing and writing"
license = "MIT"
repository = "https://github.com/telecos/lib3mf_rust"
homepage = "https://github.com/telecos/lib3mf_rust"
documentation = "https://docs.rs/lib3mf"
readme = "README.md"
keywords = ["3mf", "3d", "manufacturing", "3dprinting", "opc"]
categories = ["parser-implementations", "encoding"]
exclude = [
    "tools/",
    ".github/",
    "*.sh",
    "*.py",
    "test_suites/",
    "test_files/",
    "fuzz/",
]

[features]
default = []
# Enable this feature in CI to run tests that require external test_suites folder
ci = []

[dependencies]
zip = "7.2"
quick-xml = "0.39"
thiserror = "2.0"
# Cryptographic dependencies for SecureContent decryption
rsa = "0.9"
aes-gcm = "0.10"
base64 = "0.22"
flate2 = "1.1"
sha1 = "0.10"
sha2 = "0.10"
urlencoding = "2.1"
parry3d = "0.26"
nalgebra = "0.34"
clipper2 = "0.5"
regex = "1.12"
earcutr = "0.5"

[dev-dependencies]
tempfile = "3.14"
zip = "7.2"
walkdir = "2.5"
libtest-mimic = "0.8"
criterion = "0.8"
proptest = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[test]]
name = "conformance_individual"
path = "tests/conformance/individual.rs"
harness = false

[[bench]]
name = "parse_benchmark"
harness = false

[lints.rust]
unsafe_code = "forbid"
