[package]
name = "lib3mf-viewer"
version = "0.1.0"
edition = "2024"
authors = ["lib3mf_rust contributors"]
description = "3MF file viewer and analyzer using lib3mf_rust"
license = "MIT OR Apache-2.0"

[[bin]]
name = "lib3mf-viewer"
path = "src/main.rs"

[dependencies]
lib3mf = { path = "../.." }
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
kiss3d = { path = "kiss3d-patch" }
rfd = { version = "0.12", default-features = false, features = ["xdg-portal"] }
chrono = "0.4"
zip = "7.2"
# GitHub test suite browser dependencies
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
minifb = "0.27"
earcutr = "0.4"  # For polygon triangulation

[lints.rust]
unsafe_code = "forbid"
