[package]
authors = ["Sébastien Crozet <developer@crozet.re>", "lib3mf_rust contributors"]
name    = "kiss3d-filedrop"
version = "0.35.1"

autoexamples = true
description  = "3D graphics engine for Rust (fork with file drag-and-drop support)"
edition      = "2018"
keywords     = ["3D", "graphics", "OpenGL", "KISS"]
license      = "BSD-3-Clause"
readme       = "README.md"
repository   = "https://github.com/telecos/lib3mf_rust"

include = [
    "src/**/*.rs",
    "src/**/*.frag",
    "src/**/*.vert",
    "src/text/*.ttf",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]


[lib]
name = "kiss3d"
path = "src/lib.rs"

[features]
conrod = ["conrod_core"]


[dependencies]
bitflags     = "1.2"
conrod_core  = { version = "0.71", features = ["wasm-bindgen"], optional = true }
either       = "1"
glow         = "0.11"
image        = "0.23"
instant      = { version = "0.1", features = ["wasm-bindgen"] }
libc         = "0.2"
nalgebra     = "0.30"
ncollide3d   = "0.33"
num-traits   = "0.2"
rusttype     = { version = "0.8.3", features = ["gpu_cache"] }
serde        = "1"
serde_derive = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.26"

# WASM-specific dependencies
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "KeyEvent",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "HtmlCanvasElement",
    "HtmlElement",
    "Window",
    "UiEvent",
    "Event",
    "EventTarget",
    "Element",
    "DomRect",
] }

[dev-dependencies]
env_logger = "0.9"
nalgebra   = { version = "0.30", features = ["rand"] }
ncollide2d = "0.33"
rand       = "0.8"
